# oriented_matroids

./: CHANGELOG.md  Dockerfile  README.md  SPKG.rst  covector_oriented_matroid.py  makefile  pyproject.toml  setup.py  tox.ini
.github/workflows/: py-lint.yml
docs/source/: conf.py  index.rst
docs/source/oriented_matroids/: abstract_oriented_matroid.rst  circuit_oriented_matroid.rst  constructor.rst  covector_oriented_matroid.rst  oriented_matroid.rst  oriented_matroids_category.rst  real_hyperplane_arrangement_oriented_matroid.rst  signed_subset_element.rst  signed_vector_element.rst  vector_oriented_matroid.rst
oriented_matroids/: .signed_vector_element.py.swp  __init__.py  abstract_oriented_matroid.py  all.py  circuit_oriented_matroid.py  constructor.py  covector_oriented_matroid.py  hyperplane_arrangement_oriented_matroid.py  oriented_matroid.py  oriented_matroid_mapper.py  oriented_matroids_catalog.py  oriented_matroids_category.py  real_hyperplane_arrangement_oriented_matroid.py  signed_subset_element.py  signed_vector_element.py  vector_oriented_matroid.py
